k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genesis-frontend
  namespace: genesis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: www.csi.shopping
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: genesis-frontend
                port:
                  number: 80
